# databricks-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.cursor/rules/: databricks-mcp.mdc
docs/: capabilities.md  databricks_mcp_prd.md  databricks_mcp_tech_arch.md  implementation-plan.md
src/databricks_mcp/: __main__.py  app.py  auth.py  config.py  databricks_client.py  db_client.py  error_mapping.py  logging_config.py  server.py
src/databricks_mcp/prompts/: example_prompt.py
src/databricks_mcp/resources/: compute.py  data.py  files.py  jobs.py  ml.py  secrets.py  workspace.py
src/databricks_mcp/tools/: compute.py  data.py  files.py  jobs.py  ml.py  secrets.py  workspace.py
tests/unit/: test_auth.py  test_config.py
tests/unit/resources/: test_compute_resources.py  test_data_resources.py  test_files_resources.py  test_jobs_resources.py  test_ml_resources.py  test_secrets_resources.py  test_workspace_resources.py
tests/unit/tools/: test_compute_tools.py  test_data_tools.py  test_files_tools.py  test_jobs_tools.py  test_ml_tools.py  test_secrets_tools.py  test_workspace_tools.py
